syntax = "proto3";
package proto;
option go_package="pkg/proto;proto";
enum NodeType{
  NODE_TYPE_DATA_NODE=0;
  NODE_TYPE_MASTER_NODE=1;
  NODE_TYPE_COORDINATOR_NODE=2;
}

message NodeMeta {
  string node_id = 1;
  string ip = 2;
  string port = 3;
  string cluster_name = 4;
  string cluster_id = 5;
  bool is_master = 6;
}